2016-06-01  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/security-util.c, common-src/shm-ring.c,
	  device-src/xfer-dest-taper-splitter.c,
	  server-src/xfer-source-holding.c: Allow to completely fill the ring

2016-05-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/shm-ring.c (shm_ring_to_security_stream),
	  device-src/xfer-dest-taper-splitter.c (device_thread_wait_for_block),
	  server-src/dumper.c (handle_shm_ring_to_fd_thread): set usable after
	  getting the semaphore
	* server-src/driver.c (handle_chunker_result): Fix for BOGUS.

2016-05-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c: displayunit default ot 'K' (uppercase)
	* installcheck/Amanda_Rest_Configs.pl: Fix for K uppercase
	* installcheck/Amanda_Rest_Runs.pl: Fix for K uppercase
	* xfer-src/xfer-test.c: Call config_init(0, NULL)
	* installcheck/catalogs/*.cat: Fix for K uppercase

2016-05-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Changer.pm (make_new_tape_label): Can take meta
	  from $self
	* perl/Amanda/Changer/diskflat.pm: Use meta from state
	* installcheck/Amanda_Changer_diskflat.pl: More meta check

2016-05-27  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c: Check meta-autolabel, autolabel, labelstr and
	  tapepool do not conatisna space

2016-05-26  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amadmin.c (import_db): Fix version parsing
	* server-src/amadmin.c: Fix for level > 9

2016-05-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* xfer-src/element-glue.c: #include "conffile.h"

2016-05-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* xfer-src/element-glue.c (do_directtcp_accept): Use dtimeout for the
	  timeout

2016-05-24  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Fix fro taper failure after SHM-NAME received

2016-05-20  Jean-Louis Martineau <JMartineau@carbonite.com>