@@ -1,4 +1,8 @@
 2016-06-01  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* common-src/mem-ring.c, common-src/shm-ring.c: Make sure the ring
+	  size is at least twice the block size, otherwise the ring can hang
+
+2016-06-01  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* common-src/security-util.c, common-src/shm-ring.c,
 	  device-src/xfer-dest-taper-splitter.c,
 	  server-src/xfer-source-holding.c: Allow to completely fill the ring
